2009-09-30  Jan Moringen  <jmoringe@techfak.uni-bielefeld.de>

	* rudel-compat.el: only define pulsing progress reporter when
	Emacs does not have one itself
	(header): downcased keywords
	(make-pulsing-progress-reporter): renamed
	`make-progress-reporter-pulse' ->
	`make-pulsing-progress-reporter'; cosmetic changes; explanatory
	comment
	(progress-reporter-pulse): added documentation string
	Suggested by Phil Hagelberg

	* rudel-compat.el (progress-pulse-values): new variable; indicator
	strings used by pulsing progress reporter
	(make-progress-reporter-pulse): new function; creates pulsing
	progress reporter
	(progress-reporter-pulse): new function; updates pulsing progress
	reporter
	Suggested by Phil Hagelberg

2009-09-29  Jan Moringen  <scymtym@users.sourceforge.net>

	* obby/rudel-obby-server.el
	(rudel-obby-server-state-before-join::rudel-obby/net6_client_login):
	accept two additional arguments: global-password and user-password

	* rudel-session-initiation.el (rudel-configured-sessions):
	improved documentation string

2009-09-29  Jan Moringen  <scymtym@users.sourceforge.net>

	* INSTALL (REQUIREMENTS): wording
	(INSTALLING): mention other things that cause rudel to be
	autoloaded; minor cosmetic changes
	(COMPILING): fixed filename compile.el -> rudel-compile.el
	* ChangeLog: updated

	* rudel-compile.el (header): added copyright and meta data
	(code): let-bind rudel-dir; call `byte-recompile-directory' just
	once since it operates recursively

2009-09-28  Jan Moringen  <scymtym@users.sourceforge.net>

	* obby/rudel-obby-server.el (header): better documentation
	(require rudel-state-machine): now required for state machine
	style handling of client connections
	(require rudel-obby-state): now required; provides base class for
	states
	(rudel-obby-server-state-new): new class; client connection state
	new
	(rudel-obby-server-state-encryption-negotiate): new class; client connection state
	for negotiating encryption